Fix Sidebar icon spacing in Arabic RTL mode

--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,3 @@
 .rtl {
   direction: rtl;
 }
-
-/* RTL order utilities */
-.rtl .rtl\:order-1 {
-  order: 1;
-}
-
-.rtl .rtl\:order-2 {
-  order: 2;
-}
